# PyTDSCF

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  ty.toml
.github/: dependabot.yml
.github/workflows/: static.yml  unittest.yml
docs/: README.rst  conf.py  index.rst  modules.rst  pytdscf.basis.rst  pytdscf.potentials.rst  pytdscf.rst  pytdscf.util.rst
docs/_static/: custom.css
docs/notebook/: DVR-Exciton.ipynb  LVC.ipynb  TD_reduced_density.ipynb  TD_reduced_density_exciton.ipynb  _DVR-Exciton.ipynb  compare_elapsed_time.py  donor-acceptor.ipynb  donor-acceptor_B.ipynb  electronic-structure-calculation.ipynb  grid-based-MPO-H2CO.ipynb  h2o_kin_mpo.npz  h2o_pot_mpo.npz  henon_heiles_HO-DVR.ipynb  henon_heiles_Sine-DVR.ipynb  lh2.ipynb  poly-MPO-H2O-operate.ipynb  poly-MPO-H2O-propagate.ipynb  poly-MPO-H2O-relax.ipynb  poly-SOP-H2O-operate-revised1.ipynb  poly-SOP-H2O-operate.ipynb  poly-SOP-H2O-propagate-revised1.ipynb  poly-SOP-H2O-propagate.ipynb  poly-SOP-H2O-relax-revised1.ipynb  poly-SOP-H2O-relax.ipynb  pyrazine-qvc.ipynb  quick-start.rst  radicalpair-liouville.ipynb  radicalpair-sse.ipynb  radicalpair.ipynb  singlet_fission.ipynb  singlet_fission.py  singlet_fission2.ipynb  singlet_fission_nprocs.md  singlet_fission_nprocs.py  spectra-H2O.ipynb  visualize.ipynb
pytdscf/: __init__.py  __version__.py  _ci_cls.py  _const_cls.py  _contraction.py  _helper.py  _integrator.py  _logger.py  _mpo_cls.py  _mps_cls.py  _mps_mpo.py  _mps_parallel.py  _mps_sop.py  _ode_cls.py  _site_cls.py  _spf_cls.py  ase_handler.py  dvr_operator_cls.py  hamiltonian_cls.py  kraus.py  model_cls.py  properties.py  property.py  simulator_cls.py  spectra.py  units.py  wavefunction.py
pytdscf/basis/: __init__.py  _primints.cpp  _primints.pyi  _primints_cls.py  abc.py  boson.py  exciton.py  exponential.py  ho.py  primints_in_cpp.cpp  sin.py
pytdscf/potentials/: __init__.py  c10h12_local_potential.py  c12h14_local_potential.py  c14h16_local_potential.py  c2h4_potential.py  c4h6_local_dipole.py  c4h6_local_potential.py  c6h8_local_dipole.py  c6h8_local_potential.py  c6h8_potential.py  c8h10_local_potential.py  ch2o_dipole.py  ch2o_potential.py  h2o_5grids.db  h2o_dipole.py  h2o_potential.py  wat3_dipole.py  wat3_potential.py  wat6_dipole.py  wat6_potential.py
pytdscf/util/: __init__.py  anim_density_matrix.py  gout2dipole.py  gout2mop.py  grid2qff.py  helper_input.py  hess_util.py  korig2mop.py  korig2op.py  minfo2gout.py  mop2korig.py  plot_heatmap.py  read_nc.py
tests/: conftest.py  h2co.tensor  test_Ambrosec_propagate_np_projgs.py  test_Ambrosec_relax_np_projgs.py  test_LVC_propagate_jax.py  test_LVC_propagate_np.py  test_a1tdvp.py  test_anharmonic_dvr_db_nmr_mpssm_propagate_jax.py  test_anharmonic_fbr_mpsmctdh_numpy.py  test_anharmonic_fbr_mpsmctdh_operate_numpy.py  test_anharmonic_fbr_mpsmctdh_relax_numpy.py  test_anharmonic_fbr_mpssm_propagate_jax.py  test_anharmonic_fbr_mpssm_propagate_np.py  test_compress_mpo.py  test_exiciton_propagate.py  test_exiciton_propagate_jax.py  test_gauge.py  test_harmonic_dvr_func_full_mpssm_irelax_jax.py  test_harmonic_dvr_func_full_mpssm_jax.py  test_harmonic_dvr_func_full_mpssm_operate_jax.py  test_harmonic_dvr_func_full_mpssm_propagate_jax.py  test_harmonic_fbr_mctdh_propagate_numpy.py  test_harmonic_fbr_mpsmctdh_propagate_numpy.py  test_harmonic_fbr_sm_propagate_numpy.py  test_henon_heiles.py  test_import.py  test_mixedstate.py  test_mpi.py  test_mpi_exiciton_propagate.py  test_sample_CS_ovlp_jax.py  test_sample_CS_ovlp_np.py  test_spectra.py
