[project]
name = "pytdscf"
version = "1.0.1"
description = "Quantum dynamics simulator using tensor networks"
authors = [
    { name = "Kentaro Hino", email = "hino@theoc.kuchem.kyoto-u.ac.jp" },
    { name = "Yuki Kurashige", email = "kura@kuchem.kyoto-u.ac.jp" },
]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "dill>=0.3.9",
    "discvar",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "polars>=1.10.0",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pybind11>=2.13.6",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "ruff>=0.7.0",
    "ase>=3.23.0",
    "netcdf4>=1.7.2",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.1",
    "myst-parser>=4.0.0",
    "nbsphinx>=0.9.5",
    "pandoc>=2.4",
]

[tool.uv.sources]
discvar = { git = "https://github.com/QCLovers/Discvar.git" }
